# file_explorer

./: .gitmodules  CMakeLists.txt  TODO.txt  proto
include/: comms  entity_processor.h  file.h  file_serializer.h  main_frame.h
libs/: libcomms.dylib
proto/: file_desc.pb.cc  file_desc.pb.h  file_desc.proto
src/: entity_processor.cc  file.cpp  file_serializer.cc  main.cc  main.cpp  main_frame.cc  main_frame.cpp
test/: client_main.cc  command_processor.cc  test.cc
test/parent_dir/: child_file.txt
test/parent_dir/child_dir/: grand_child_file.txt
